--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
@@ -5670,7 +5671,7 @@
                                 <div class="ast-builder-layout-element ast-flex site-header-focus-item"
                                      data-section="title_tagline">
                                     <div class="site-branding ast-site-identity" itemtype="#" itemscope="itemscope">
-                                        <span class="site-logo-img"><a href="index.html" class="custom-logo-link"
+                                        <span class="site-logo-img"><a href="{% url 'index' %}" class="custom-logo-link"
                                                                        rel="home"><img width="55" height="62"
                                                                                        src="https://websitedemos.net/life-coach-sara-john/wp-content/uploads/sites/441/2019/04/life-coach-flower-logo-55x62.png"
                                                                                        class="custom-logo"
@@ -5679,7 +5680,7 @@
                                                                                        sizes="(max-width: 55px) 100vw, 55px"/></a></span>
                                         <div class="ast-site-title-wrap">
 <span class="site-title" itemprop="name">
-<a href="index.html" rel="home" itemprop="url">
+<a href="{% url 'index' %}" rel="home" itemprop="url">
 Life Coach
 </a>
 </span>
@@ -5705,18 +5706,18 @@ Life Coach
                                                         class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-fade  stack-on-mobile">
                                                         <li id="menu-item-633"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-621 current_page_item menu-item-633">
-                                                            <a href="about.html" aria-current="page" class="menu-link">About</a>
+                                                            <a href="{% url 'about' %}" aria-current="page" class="menu-link">About</a>
                                                         </li>
                                                         <li id="menu-item-634"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-634">
-                                                            <a href="work_with_me.html" class="menu-link">Work With
+                                                            <a href="{% url 'work_with_me' %}" class="menu-link">Work With
                                                                 Me</a></li>
                                                         <li id="menu-item-617"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">
-                                                            <a href="books.html" class="menu-link">Books</a></li>
+                                                            <a href="{% url 'books' %}" class="menu-link">Books</a></li>
                                                         <li id="menu-item-418"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-418">
-                                                            <a href="contact.html" class="menu-link">Contact</a></li>
+                                                            <a href="{% url 'contact' %}" class="menu-link">Contact</a></li>
                                                     </ul>
                                                 </div>
                                             </nav>
@@ -5764,7 +5765,7 @@ Life Coach
                             <div class="ast-builder-layout-element ast-flex site-header-focus-item"
                                  data-section="title_tagline">
                                 <div class="site-branding ast-site-identity" itemtype="#" itemscope="itemscope">
-                                    <span class="site-logo-img"><a href="index.html" class="custom-logo-link"
+                                    <span class="site-logo-img"><a href="{% url 'index' %}" class="custom-logo-link"
                                                                    rel="home"><img width="55" height="62"
                                                                                    src="https://websitedemos.net/life-coach-sara-john/wp-content/uploads/sites/441/2019/04/life-coach-flower-logo-55x62.png"
                                                                                    class="custom-logo" alt="Life Coach"
@@ -5773,7 +5774,7 @@ Life Coach
                                                                                    sizes="(max-width: 55px) 100vw, 55px"/></a></span>
                                     <div class="ast-site-title-wrap">
 <span class="site-title" itemprop="name">
-<a href="index.html" rel="home" itemprop="url">
+<a href="{% url 'index' %}" rel="home" itemprop="url">
 Life Coach
 </a>
 </span>
@@ -5822,13 +5823,13 @@ Life Coach
                                     <ul id="ast-hf-menu-1"
                                         class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-fade  stack-on-mobile">
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-621 current_page_item menu-item-633">
-                                            <a href="about.html" aria-current="page" class="menu-link">About</a></li>
+                                            <a href="{% url 'about' %}" aria-current="page" class="menu-link">About</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-634">
-                                            <a href="work_with_me.html" class="menu-link">Work With Me</a></li>
+                                            <a href="{% url 'work_with_me' %}" class="menu-link">Work With Me</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">
-                                            <a href="books.html" class="menu-link">Books</a></li>
+                                            <a href="{% url 'books' %}" class="menu-link">Books</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-418">
-                                            <a href="contact.html" class="menu-link">Contact</a></li>
+                                            <a href="{% url 'contact' %}" class="menu-link">Contact</a></li>
                                     </ul>
                                 </div>
                             </nav>
