--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,9 @@
     </script>
     <meta name='robots' content='noindex, nofollow'/>
 
-    <title>Home - Life Coach</title>
+    <title>Asosiy
+
+    </title>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Home - Life Coach"/>
@@ -5679,11 +5681,11 @@
                                         <div class="ast-site-title-wrap">
                                             <h1 class="site-title" itemprop="name">
                                                 <a href="{% url 'index' %}" rel="home" itemprop="url">
-                                                    Life Coach
+                                                    Asosiy
                                                 </a>
                                             </h1>
                                             <p class="site-description" itemprop="description">
-                                                Where Smiles Lead The Way
+                                                Qarshi shahar xokimligi
                                             </p>
                                         </div>
                                     </div>
@@ -5721,38 +5723,38 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="ast-builder-layout-element site-header-focus-item ast-header-woo-cart"
-                                     data-section="section-header-woo-cart">
-                                    <div id="ast-site-header-cart"
-                                         class="ast-site-header-cart ast-menu-cart-with-border ast-desktop-cart-flyout ast-menu-cart-outline">
-                                        <div class="ast-site-header-cart-li ">
-                                            <a href="https://websitedemos.net/life-coach-sara-john/cart/"
-                                               class="cart-container ast-cart-desktop-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">
-                                                <div class="ast-addon-cart-wrap ast-desktop-cart-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">
-<span class="ast-woo-header-cart-info-wrap">
-<span class="ast-woo-header-cart-total"><span class="woocommerce-Price-amount amount"><bdi><span
-        class="woocommerce-Price-currencySymbol">&pound;</span>0.00</bdi></span></span>
-</span>
-                                                    <i class="astra-icon ast-icon-shopping-bag "
-                                                       data-cart-total="0"></i>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="ast-site-header-cart-data">
-                                            <div class="widget woocommerce widget_shopping_cart">
-                                                <div class="widget_shopping_cart_content"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="ast-desktop-header-content content-align-flex-start ">
-            </div>
-        </div>
+{#                                <div class="ast-builder-layout-element site-header-focus-item ast-header-woo-cart"#}
+{#                                     data-section="section-header-woo-cart">#}
+{#                                    <div id="ast-site-header-cart"#}
+{#                                         class="ast-site-header-cart ast-menu-cart-with-border ast-desktop-cart-flyout ast-menu-cart-outline">#}
+{#                                        <div class="ast-site-header-cart-li ">#}
+{#                                            <a href="https://websitedemos.net/life-coach-sara-john/cart/"#}
+{#                                               class="cart-container ast-cart-desktop-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">#}
+{#                                                <div class="ast-addon-cart-wrap ast-desktop-cart-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">#}
+{#<span class="ast-woo-header-cart-info-wrap">#}
+{#<span class="ast-woo-header-cart-total"><span class="woocommerce-Price-amount amount"><bdi><span#}
+{#        class="woocommerce-Price-currencySymbol">&pound;</span>0.00</bdi></span></span>#}
+{#</span>#}
+{#                                                    <i class="astra-icon ast-icon-shopping-bag "#}
+{#                                                       data-cart-total="0"></i>#}
+{#                                                </div>#}
+{#                                            </a>#}
+{#                                        </div>#}
+{#                                        <div class="ast-site-header-cart-data">#}
+{#                                            <div class="widget woocommerce widget_shopping_cart">#}
+{#                                                <div class="widget_shopping_cart_content"></div>#}
+{#                                            </div>#}
+{#                                        </div>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="ast-desktop-header-content content-align-flex-start ">#}
+{#            </div>#}
+{#        </div>#}
         <div id="ast-mobile-header" class="ast-mobile-header-wrap " data-type="dropdown">
             <div class="ast-main-header-wrap main-header-bar-wrap">
                 <div class="ast-primary-header-bar ast-primary-header main-header-bar site-primary-header-wrap site-header-focus-item ast-builder-grid-row-layout-default ast-builder-grid-row-tablet-layout-default ast-builder-grid-row-mobile-layout-default"
@@ -5817,7 +5819,7 @@ Life Coach
                     <div class="ast-main-header-bar-alignment">
                         <div class="main-header-bar-navigation">
                             <nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item"
-                                 id="primary-site-navigation-mobile" aria-label="Site Navigation"
+                                 id="primary-https://websitedemos.net/life-coach-sara-john/wp-content/site-navigation-mobile" aria-label="Site Navigation"
                                  itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope">
                                 <div class="main-navigation ast-inline-flex">
                                     <ul id="ast-hf-menu-1"
@@ -5856,7 +5858,7 @@ Life Coach
                                         <section
                                                 class="elementor-section elementor-top-section elementor-element elementor-element-77ccb31 elementor-section-height-min-height elementor-section-boxed elementor-section-height-default elementor-section-items-middle"
                                                 data-id="77ccb31" data-element_type="section"
-                                                data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;shape_divider_bottom&quot;:&quot;wave-brush&quot;}">
+{#                                                data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;shape_divider_bottom&quot;:&quot;wave-brush&quot;}">#}
                                             <div class="elementor-background-overlay"></div>
                                             <div class="elementor-shape elementor-shape-bottom" data-negative="false">
                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 283.5 27.8"
@@ -5892,24 +5894,25 @@ Life Coach
                                                                      data-id="de72c4a" data-element_type="widget"
                                                                      data-widget_type="heading.default">
                                                                     <div class="elementor-widget-container">
-                                                                        <h1 class="elementor-heading-title elementor-size-default">
-                                                                            Swap Burning Out For a Fire Within</h1>
+                                                                        <h2 class="elementor-heading-title elementor-size-default" style="color: black">
+                                                                            Qarshi shahar xokimligi</h2>
+                                                                        <br>
                                                                     </div>
                                                                 </div>
-                                                                <div class="elementor-element elementor-element-1ff9680 elementor-align-center elementor-widget elementor-widget-button"
-                                                                     data-id="1ff9680" data-element_type="widget"
-                                                                     data-widget_type="button.default">
-                                                                    <div class="elementor-widget-container">
-                                                                        <div class="elementor-button-wrapper">
-                                                                            <a class="elementor-button elementor-button-link elementor-size-md"
-                                                                               href="#">
-<span class="elementor-button-content-wrapper">
-<span class="elementor-button-text">Start Here</span>
-</span>
-                                                                            </a>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
+{#                                                                <div class="elementor-element elementor-element-1ff9680 elementor-align-center elementor-widget elementor-widget-button"#}
+{#                                                                     data-id="1ff9680" data-element_type="widget"#}
+{#                                                                     data-widget_type="button.default">#}
+{#                                                                    <div class="elementor-widget-container">#}
+{#                                                                        <div class="elementor-button-wrapper">#}
+{#                                                                            <a class="elementor-button elementor-button-link elementor-size-md"#}
+{#                                                                               href="#">#}
+{#<span class="elementor-button-content-wrapper">#}
+{#<span class="elementor-button-text">Start Here</span>#}
+{#</span>#}
+{#                                                                            </a>#}
+{#                                                                        </div>#}
+{#                                                                    </div>#}
+{#                                                                </div>#}
                                                             </div>
                                                         </div>
                                                     </div>
@@ -5917,7 +5920,7 @@ Life Coach
                                             </div>
                                         </section>
                                         <section
-                                                class="elementor-section elementor-top-section elementor-element elementor-element-15c70903 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default"
+{#                                                class="elementor-section elementor-top-section elementor-element elementor-element-15c70903 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default"#}
                                                 data-id="15c70903" data-element_type="section"
                                                 data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
                                             <div class="elementor-container elementor-column-gap-wide">
@@ -5933,10 +5936,11 @@ Life Coach
                                                                         <div class="elementor-image">
                                                                             <img decoding="async" width="600"
                                                                                  height="900"
-                                                                                 src="https://websitedemos.net/life-coach-sara-john/wp-content/uploads/sites/441/2020/02/profile-picture.jpg"
+{#                                                                                 opani rasmi#}
+                                                                                 src="https://fastly.4sqi.net/img/general/600x600/42373925_jV3PSweaoMD3NUWGesdIm5QqgzBFxi9LXr7YyvMH0UI.jpg"
                                                                                  class="attachment-medium_large size-medium_large wp-image-942"
                                                                                  alt="" loading="lazy"
-                                                                                 srcset="https://websitedemos.net/life-coach-sara-john/wp-content/uploads/sites/441/2020/02/profile-picture.jpg 600w, https://websitedemos.net/life-coach-sara-john/wp-content/uploads/sites/441/2020/02/profile-picture-200x300.jpg 200w, https://websitedemos.net/life-coach-sara-john/wp-content/uploads/sites/441/2020/02/profile-picture-400x600.jpg 400w"
+                                                                                 srcset="https://fastly.4sqi.net/img/general/600x600/42373925_jV3PSweaoMD3NUWGesdIm5QqgzBFxi9LXr7YyvMH0UI.jpg 600w, https://fastly.4sqi.net/img/general/600x600/42373925_jV3PSweaoMD3NUWGesdIm5QqgzBFxi9LXr7YyvMH0UI.jpg 200w,https://fastly.4sqi.net/img/general/600x600/42373925_jV3PSweaoMD3NUWGesdIm5QqgzBFxi9LXr7YyvMH0UI.jpg 400w"
                                                                                  sizes="(max-width: 600px) 100vw, 600px"/>
                                                                         </div>
                                                                     </div>
@@ -5996,11 +6000,11 @@ Life Coach
                                                                      data-widget_type="button.default">
                                                                     <div class="elementor-widget-container">
                                                                         <div class="elementor-button-wrapper">
-                                                                            <a class="elementor-button elementor-button-link elementor-size-md"
-                                                                               href="#">
-<span class="elementor-button-content-wrapper">
-<span class="elementor-button-text">Read My Story</span>
-</span>
+{#                                                                            <a class="elementor-button elementor-button-link elementor-size-md"#}
+{#                                                                               href="#">#}
+{#<span class="elementor-button-content-wrapper">#}
+{#<span class="elementor-button-text">Read My Story</span>#}
+{#</span>#}
                                                                             </a>
                                                                         </div>
                                                                     </div>
