--- a/templates/work_with_me.html
+++ b/templates/work_with_me.html
@@ -5440,11 +5440,11 @@
           href='https://websitedemos.net/life-coach-sara-john/wp-content/plugins/elementor/assets/lib/font-awesome/css/solid.min.css?ver=5.15.3'
           media='all'/>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <script type="text/template" id="tmpl-variation-template">
-        <div class="woocommerce-variation-description">{{{ data.variation.variation_description }}}</div>
-        <div class="woocommerce-variation-price">{{{ data.variation.price_html }}}</div>
-        <div class="woocommerce-variation-availability">{{{ data.variation.availability_html }}}</div>
-    </script>
+{#    <script type="text/template" id="tmpl-variation-template">#}
+{#        <div class="woocommerce-variation-description">{{{ data.variation.variation_description }}}</div>#}
+{#        <div class="woocommerce-variation-price">{{{ data.variation.price_html }}}</div>#}
+{#        <div class="woocommerce-variation-availability">{{{ data.variation.availability_html }}}</div>#}
+{#    </script>#}
     <script type="text/template" id="tmpl-unavailable-variation-template">
         <p>Sorry, this product is unavailable. Please choose a different combination.</p>
     </script>
