--- a/templates/index.html
+++ b/templates/index.html
@@ -6108,10 +6108,12 @@ Life Coach
                                                                                                              loading="lazy"/>
                                                                                                     </figure>
                                                                                                     <div class="elementor-image-box-content">
-                                                                                                        <h3 class="elementor-image-box-title">
-                                                                                                            Sample
-                                                                                                            Service
-                                                                                                            1</h3>
+                                                                                                            <h3 class="elementor-image-box-title">
+                                                                                                                Shahar
+                                                                                                            </h3>
+                                                                                                        <select class="elementor-image-box-title" style="width:300px; background-color: white; font-family: sans-serif; text-align: center; border-radius: 10px" >
+                                                                                                            <option>Sample Service 1</option>
+                                                                                                            </select>
                                                                                                     </div>
                                                                                                 </div>
                                                                                             </div>
@@ -6138,10 +6140,12 @@ Life Coach
                                                                                                              loading="lazy"/>
                                                                                                     </figure>
                                                                                                     <div class="elementor-image-box-content">
-                                                                                                        <h3 class="elementor-image-box-title">
-                                                                                                            Sample
-                                                                                                            Service
-                                                                                                            2</h3>
+                                                                                                            <h3 class="elementor-image-box-title">
+                                                                                                                Tuman
+                                                                                                            </h3>
+                                                                                                        <select class="elementor-image-box-title" style="width:300px; background-color: white; font-family: sans-serif; text-align: center; border-radius: 10px" >
+                                                                                                            <option>Sample Service 1</option>
+                                                                                                            </select>
                                                                                                     </div>
                                                                                                 </div>
                                                                                             </div>
@@ -6168,10 +6172,12 @@ Life Coach
                                                                                                              loading="lazy"/>
                                                                                                     </figure>
                                                                                                     <div class="elementor-image-box-content">
-                                                                                                        <h3 class="elementor-image-box-title">
-                                                                                                            Sample
-                                                                                                            Service
-                                                                                                            3</h3>
+                                                                                                            <h3 class="elementor-image-box-title">
+                                                                                                                Loyiha
+                                                                                                            </h3>
+                                                                                                        <select class="elementor-image-box-title" style="width:300px; background-color: white; font-family: sans-serif; text-align: center; border-radius: 10px" >
+                                                                                                            <option>Sample Service 1</option>
+                                                                                                            </select>
                                                                                                     </div>
                                                                                                 </div>
                                                                                             </div>
@@ -6187,15 +6193,15 @@ Life Coach
                                                                      data-widget_type="button.default">
                                                                     <div class="elementor-widget-container">
                                                                         <div class="elementor-button-wrapper">
-                                                                            <a class="elementor-button elementor-button-link elementor-size-md"
-                                                                               href="#">
-<span class="elementor-button-content-wrapper">
-<span class="elementor-button-icon elementor-align-icon-right">
-<i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-</span>
-<span class="elementor-button-text">View More</span>
-</span>
-                                                                            </a>
+{#                                                                            <a class="elementor-button elementor-button-link elementor-size-md"#}
+{#                                                                               href="#">#}
+{#<span class="elementor-button-content-wrapper">#}
+{#<span class="elementor-button-icon elementor-align-icon-right">#}
+{#<i class="fa fa-chevron-circle-right" aria-hidden="true"></i>#}
+{#</span>#}
+{#<span class="elementor-button-text">View More</span>#}
+{#</span>#}
+{#                                                                            </a>#}
                                                                         </div>
                                                                     </div>
                                                                 </div>
