--- a/templates/index.html
+++ b/templates/index.html
@@ -5709,8 +5709,7 @@
                                                             <a href="{% url 'about' %}" class="menu-link">About</a></li>
                                                         <li id="menu-item-634"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-634">
-                                                            <a href="{% url 'work_with_me' %}" class="menu-link">Work With
-                                                                Me</a></li>
+                                                            <a href="{% url 'work_with_me' %}" class="menu-link">Loyihalar</a></li>
                                                         <li id="menu-item-617"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">
                                                             <a href="{% url 'books' %}" class="menu-link">Books</a></li>
@@ -5894,6 +5893,7 @@ Life Coach
                                                                      data-id="de72c4a" data-element_type="widget"
                                                                      data-widget_type="heading.default">
                                                                     <div class="elementor-widget-container">
+                                                                        <br>
                                                                         <h2 class="elementor-heading-title elementor-size-default" style="color: black">
                                                                             Qarshi shahar xokimligi</h2>
                                                                         <br>
@@ -6173,7 +6173,7 @@ Life Coach
                                                                                                     </figure>
                                                                                                     <div class="elementor-image-box-content">
                                                                                                             <h3 class="elementor-image-box-title">
-                                                                                                                Loyiha
+                                                                                                                Loyihalar
                                                                                                             </h3>
                                                                                                         <select class="elementor-image-box-title" style="width:300px; background-color: white; font-family: sans-serif; text-align: center; border-radius: 10px" >
                                                                                                             <option>Sample Service 1</option>
