--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5706,8 +5706,7 @@ Life Coach
                                                             <a href="{% url 'about' %}" class="menu-link">About</a></li>
                                                         <li id="menu-item-634"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-634">
-                                                            <a href="{% url 'work_with_me' %}" class="menu-link">Work With
-                                                                Me</a></li>
+                                                            <a href="{% url 'work_with_me' %}" class="menu-link">Loyihalar</a></li>
                                                         <li id="menu-item-617"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">
                                                             <a href="{% url 'books' %}" class="menu-link">Books</a></li>
@@ -5721,27 +5720,27 @@ Life Coach
                                         </div>
                                     </div>
                                 </div>
-                                <div class="ast-builder-layout-element site-header-focus-item ast-header-woo-cart"
-                                     data-section="section-header-woo-cart">
-                                    <div id="ast-site-header-cart"
-                                         class="ast-site-header-cart ast-menu-cart-with-border ast-desktop-cart-flyout ast-menu-cart-outline">
-                                        <div class="ast-site-header-cart-li ">
-                                            <a href="https://websitedemos.net/life-coach-sara-john/cart/"
-                                               class="cart-container ast-cart-desktop-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">
-                                                <div class="ast-addon-cart-wrap ast-desktop-cart-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">
-<span class="ast-woo-header-cart-info-wrap">
-<span class="ast-woo-header-cart-total"><span class="woocommerce-Price-amount amount"><bdi><span
-        class="woocommerce-Price-currencySymbol">&pound;</span>0.00</bdi></span></span>
-</span>
-                                                    <i class="astra-icon ast-icon-shopping-bag "
-                                                       data-cart-total="0"></i>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="ast-site-header-cart-data">
-                                            <div class="widget woocommerce widget_shopping_cart">
-                                                <div class="widget_shopping_cart_content"></div>
-                                            </div>
+{#                                <div class="ast-builder-layout-element site-header-focus-item ast-header-woo-cart"#}
+{#                                     data-section="section-header-woo-cart">#}
+{#                                    <div id="ast-site-header-cart"#}
+{#                                         class="ast-site-header-cart ast-menu-cart-with-border ast-desktop-cart-flyout ast-menu-cart-outline">#}
+{#                                        <div class="ast-site-header-cart-li ">#}
+{#                                            <a href="https://websitedemos.net/life-coach-sara-john/cart/"#}
+{#                                               class="cart-container ast-cart-desktop-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">#}
+{#                                                <div class="ast-addon-cart-wrap ast-desktop-cart-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">#}
+{#<span class="ast-woo-header-cart-info-wrap">#}
+{#<span class="ast-woo-header-cart-total"><span class="woocommerce-Price-amount amount"><bdi><span#}
+{#        class="woocommerce-Price-currencySymbol">&pound;</span>0.00</bdi></span></span>#}
+{#</span>#}
+{#                                                    <i class="astra-icon ast-icon-shopping-bag "#}
+{#                                                       data-cart-total="0"></i>#}
+{#                                                </div>#}
+{#                                            </a>#}
+{#                                        </div>#}
+{#                                        <div class="ast-site-header-cart-data">#}
+{#                                            <div class="widget woocommerce widget_shopping_cart">#}
+{#                                                <div class="widget_shopping_cart_content"></div>#}
+{#                                            </div>#}
                                         </div>
                                     </div>
                                 </div>
