--- a/templates/loyihalar.html
+++ b/templates/loyihalar.html
@@ -5707,12 +5707,12 @@
                                                                                        sizes="(max-width: 55px) 100vw, 55px"/></a></span>
                                         <div class="ast-site-title-wrap">
 <span class="site-title" itemprop="name">
-<a href="{% url 'index' %}" rel="home" itemprop="url">
-Life Coach
+<a href="{% url 'work_with_me' %}" rel="home" itemprop="url">
+Loyihalar
 </a>
 </span>
                                             <p class="site-description" itemprop="description">
-                                                Where Smiles Lead The Way
+                                                Qarshi shahar xokimligi
                                             </p>
                                         </div>
                                     </div>
@@ -5737,7 +5737,7 @@ Life Coach
                                                         <li id="menu-item-634"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-622 current_page_item menu-item-634">
                                                             <a href="{% url 'work_with_me' %}" aria-current="page"
-                                                               class="menu-link">Work With Me</a></li>
+                                                               class="menu-link">Loyihalar</a></li>
                                                         <li id="menu-item-617"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">
                                                             <a href="{% url 'books' %}" class="menu-link">Books</a></li>
@@ -5750,28 +5750,28 @@ Life Coach
                                         </div>
                                     </div>
                                 </div>
-                                <div class="ast-builder-layout-element site-header-focus-item ast-header-woo-cart"
-                                     data-section="section-header-woo-cart">
-                                    <div id="ast-site-header-cart"
-                                         class="ast-site-header-cart ast-menu-cart-with-border ast-desktop-cart-flyout ast-menu-cart-outline">
-                                        <div class="ast-site-header-cart-li ">
-                                            <a href="https://websitedemos.net/life-coach-sara-john/cart/"
-                                               class="cart-container ast-cart-desktop-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">
-                                                <div class="ast-addon-cart-wrap ast-desktop-cart-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">
-<span class="ast-woo-header-cart-info-wrap">
-<span class="ast-woo-header-cart-total"><span class="woocommerce-Price-amount amount"><bdi><span
-        class="woocommerce-Price-currencySymbol">&pound;</span>0.00</bdi></span></span>
-</span>
-                                                    <i class="astra-icon ast-icon-shopping-bag "
-                                                       data-cart-total="0"></i>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="ast-site-header-cart-data">
-                                            <div class="widget woocommerce widget_shopping_cart">
-                                                <div class="widget_shopping_cart_content"></div>
-                                            </div>
-                                        </div>
+{#                                <div class="ast-builder-layout-element site-header-focus-item ast-header-woo-cart"#}
+{#                                     data-section="section-header-woo-cart">#}
+{#                                    <div id="ast-site-header-cart"#}
+{#                                         class="ast-site-header-cart ast-menu-cart-with-border ast-desktop-cart-flyout ast-menu-cart-outline">#}
+{#                                        <div class="ast-site-header-cart-li ">#}
+{#                                            <a href="https://websitedemos.net/life-coach-sara-john/cart/"#}
+{#                                               class="cart-container ast-cart-desktop-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">#}
+{#                                                <div class="ast-addon-cart-wrap ast-desktop-cart-position-left ast-cart-mobile-position- ast-cart-tablet-position- ">#}
+{#<span class="ast-woo-header-cart-info-wrap">#}
+{#<span class="ast-woo-header-cart-total"><span class="woocommerce-Price-amount amount"><bdi><span#}
+{#        class="woocommerce-Price-currencySymbol">&pound;</span>0.00</bdi></span></span>#}
+{#</span>#}
+{#                                                    <i class="astra-icon ast-icon-shopping-bag "#}
+{#                                                       data-cart-total="0"></i>#}
+{#                                                </div>#}
+{#                                            </a>#}
+{#                                        </div>#}
+{#                                        <div class="ast-site-header-cart-data">#}
+{#                                            <div class="widget woocommerce widget_shopping_cart">#}
+{#                                                <div class="widget_shopping_cart_content"></div>#}
+{#                                            </div>#}
+{#                                        </div>#}
                                     </div>
                                 </div>
                             </div>
