--- a/templates/index.html
+++ b/templates/index.html
@@ -5706,16 +5706,16 @@
                                                         class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-fade  stack-on-mobile">
                                                         <li id="menu-item-633"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-633">
-                                                            <a href="{% url 'about' %}" class="menu-link">About</a></li>
+                                                            <a href="{% url 'about' %}" class="menu-link">Biz haqimizda</a></li>
                                                         <li id="menu-item-634"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-634">
                                                             <a href="{% url 'work_with_me' %}" class="menu-link">Loyihalar</a></li>
                                                         <li id="menu-item-617"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">
-                                                            <a href="{% url 'books' %}" class="menu-link">Books</a></li>
+                                                            <a href="{% url 'books' %}" class="menu-link">Kitoblar</a></li>
                                                         <li id="menu-item-418"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-418">
-                                                            <a href="{% url 'contact' %}" class="menu-link">Contact</a></li>
+                                                            <a href="{% url 'contact' %}" class="menu-link">Bog'lanish</a></li>
                                                     </ul>
                                                 </div>
                                             </nav>
@@ -5964,7 +5964,7 @@ Life Coach
                                                                      data-widget_type="heading.default">
                                                                     <div class="elementor-widget-container">
                                                                         <h2 class="elementor-heading-title elementor-size-default">
-                                                                            Sara John</h2></div>
+                                                                            Asilbek_17</h2></div>
                                                                 </div>
                                                                 <div class="elementor-element elementor-element-525dc806 elementor-widget-divider--view-line elementor-widget elementor-widget-divider"
                                                                      data-id="525dc806" data-element_type="widget"
@@ -6047,8 +6047,7 @@ Life Coach
                                                                                              data-widget_type="heading.default">
                                                                                             <div class="elementor-widget-container">
                                                                                                 <h2 class="elementor-heading-title elementor-size-default">
-                                                                                                    How May I Help
-                                                                                                    You?</h2></div>
+Sizga qanday yordam bera olishim mumkin?                                                                                                   </h2></div>
                                                                                         </div>
                                                                                         <div class="elementor-element elementor-element-531d9fd elementor-widget-divider--view-line elementor-widget elementor-widget-divider"
                                                                                              data-id="531d9fd"
