--- a/templates/loyihalar.html
+++ b/templates/loyihalar.html
@@ -5733,17 +5733,17 @@ Loyihalar
                                                         class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-fade  stack-on-mobile">
                                                         <li id="menu-item-633"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-633">
-                                                            <a href="{% url 'about' %}" class="menu-link">About</a></li>
+                                                            <a href="{% url 'about' %}" class="menu-link">Biz haqimizda</a></li>
                                                         <li id="menu-item-634"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-622 current_page_item menu-item-634">
                                                             <a href="{% url 'work_with_me' %}" aria-current="page"
                                                                class="menu-link">Loyihalar</a></li>
                                                         <li id="menu-item-617"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">
-                                                            <a href="{% url 'books' %}" class="menu-link">Books</a></li>
+                                                            <a href="{% url 'books' %}" class="menu-link">Kitoblar</a></li>
                                                         <li id="menu-item-418"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-418">
-                                                            <a href="{% url 'contact' %}" class="menu-link">Contact</a></li>
+                                                            <a href="{% url 'contact' %}" class="menu-link">Biz bilan bog'lanish</a></li>
                                                     </ul>
                                                 </div>
                                             </nav>
